--- a/front-end/home/index.html
+++ b/front-end/home/index.html
@@ -105,9 +105,9 @@
     </footer>
 
     <!-- JS -->
-    <script src="../../assets/script/jquery.js"></script>
-    <script src="../../assets/script/bootstrap.bundle.min.js"></script>
-    <script src="../../assets/script/script.js"></script>
+    <script src="../assets/script/jquery.js"></script>
+    <script src="../assets/script/bootstrap.bundle.min.js"></script>
+    <script src="../assets/script/script.js"></script>
 
 </body>
 </html>
