--- a/front-end/portal/index.html
+++ b/front-end/portal/index.html
@@ -11,121 +11,123 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg" style="background-color: white;">
 
-    <a class="navbar-brand" href="index.html">
-      <img id="logo-header" src="..\assets\images\logo.png" alt="logo"
-        height="30px">
-    </a>
+    <header id="menu-portal-resumo">
 
-    <span>
-      <a class="navbar-brand" href="index.html" style="color: black;">
-          Shelf
-      </a>
-    </span>
+        <nav class="navbar navbar-light bg-light navbar-fixed-top navbar-expand-lg">
+            <div class="container">
 
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar"
-        onkeypress="return enterPesquisa(event)" id="pesquisa-header" size="40px">
-    </form>
+                <div class="navbar-brand">
+                    <span class="navbar-logo">
+                        <a href="index.html"><img src="../assets/images/logo.png" alt="logo" style="height: 3.4rem;"></a>
+                    </span>
+                    <span>
+                        <a class="navbar-brand ml-2" href="index.html" style="font-size: 1.5rem;">
+                            Shelf
+                        </a>
+                    </span>
+                </div>
 
-    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html" style="color: black;">Home <span class="sr-only">(página
-              atual)</span></a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false" style="color: black;">
-            Opções
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Adiocinar Livro</a>
-            <a class="dropdown-item" href="#">Atualizar Status</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Avaliar Livro</a>
-          </div>
-        </li>
-      </ul>
-    </div>
+                <div class="nav navbar-right" style="font-size: 1.5em;">
+                    
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active mx-4">
+                            <a class="nav-link" href="lista-para-ler.html" style="color: black;">
+                                Para Ler
+                            </a>
+                        </li>
+                        <li class="nav-item active mx-4">
+                            <a class="nav-link" href="lista-lendo-agora.html" style="color: black;">
+                                Lendo Agora
+                            </a>
+                        </li>
+                        <li class="nav-item active mx-4">
+                            <a class="nav-link" href="lista-lidos.html" style="color: black;">
+                                Lidos
+                            </a>
+                        </li>
+                    </ul>
 
-    <div class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="perfilDropdown" role="button" data-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false" style="color: black;">
-        <img id="perfil-header" src="..\assets\images\perfil.png" alt="perfil" height="30px">
-      </a>
-      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="#">Meus Livros</a>
-        <a class="dropdown-item" href="#">Minhas Avaliações</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Perfil</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Sair</a>
-      </div>
-    </div>
-  </nav>
-  
-  <main>
-  <section style="background-color: lightgray;">
-    <div class="container">
-    <h1>Resumo</h1>  
-      <div class="row">
-        <div class="col-6"> 
-            <table class="table table-striped table-light" style="text-align:center; font-size: large">
-                <thead>
-                    <tr>
-                        <th scope="col">Livros Lidos</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>3</td>
-                </tbody>
-            </table>
-            <table class="table table-striped table-light" style="text-align:center; font-size: large">
-                <thead>
-                    <tr>
-                        <th scope="col">Páginas Lidas</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1400</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="col-6">
-            <table class="table table-striped table-light" style="text-align:center; font-size: large">
-                <thead>
-                    <tr>
-                        <th scope="col">Tempo de Leitura</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>60 dias</td>
-                    </tr>
-                </tbody>
-            </table>
-            <table class="table table-striped table-light" style="text-align:center; font-size: large">
-                <thead>
-                    <tr>
-                        <th scope="col">Média Tempo de Leitura</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>23 páginas/dia</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-      </div>
-    </div>
-  </section>
-  </main>
+                    <div class="nav-item dropdown ml-2">
+                        <a class="nav-link dropdown-toggle" href="#" id="perfilDropdown" role="button" data-toggle="dropdown"
+                          aria-haspopup="true" aria-expanded="false" style="color: black;">
+                          <img id="perfil-header" src="..\assets\images\perfil.png" alt="perfil" height="30px">
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="#">Perfil</a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="../home/index.html">Sair</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </nav>
+
+    </header>
+
+    <main>
+        <section style="background-color: lightgray;">
+            <div class="container text-center py-4">
+                <h1>Resumo</h1>
+                <br>
+                <div class="row">
+                    <div class="col-6 py-4"> 
+                        <table class="table table-striped table-light mb-5" style="text-align:center; font-size: large">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Livros Lidos</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>3</td>
+                            </tbody>
+                        </table>
+                        <table class="table table-striped table-light mt-5" style="text-align:center; font-size: large">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Páginas Lidas</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1400</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col-6 py-4">
+                        <table class="table table-striped table-light mb-5" style="text-align:center; font-size: large">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Tempo de Leitura</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>60 dias</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <table class="table table-striped table-light mt-5" style="text-align:center; font-size: large">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Média Tempo de Leitura</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>23 páginas/dia</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <br><br><br>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
   <footer class="footer">
 
@@ -135,9 +137,9 @@
 
   </footer>
   <!-- JS -->
-    <script src="../../assets/script/jquery.js"></script>
-    <script src="../../assets/script/bootstrap.bundle.min.js"></script>
-    <script src="../../assets/script/script.js"></script>
+    <script src="../assets/script/jquery.js"></script>
+    <script src="../assets/script/bootstrap.bundle.min.js"></script>
+    <script src="../assets/script/script.js"></script>
 
 </body>
 
