--- a/front-end/portal/lista-lendo-agora.html
+++ b/front-end/portal/lista-lendo-agora.html
@@ -2,124 +2,119 @@
 <html>
 
 <head>
-  <title>Lendo Agora - Livros</title>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../assets/css/estilo.css">
+    <title>Lendo Agora - Shelf</title>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="..\assets\images\logo.png" type="image/x-icon">
+  <link rel="stylesheet" href="..\assets\css\bootstrap.min.css">
+  <link rel="stylesheet" href="..\assets\css\style.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg" style="background-color: royalblue;">
 
-    <a class="navbar-brand" href="index.html"><img id="logo-header" src="..\assets\images\logo.png" alt="logo"
-        height="30px"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
-      aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <header id="menu-portal-resumo">
 
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar"
-        onkeypress="return enterPesquisa(event)" id="pesquisa-header" size="40px">
-    </form>
+        <nav class="navbar navbar-light bg-light navbar-fixed-top navbar-expand-lg">
+            <div class="container">
 
-    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html" style="color: black;">Home <span class="sr-only">(página
-              atual)</span></a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false" style="color: black;">
-            Opções
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Adiocinar Livro</a>
-            <a class="dropdown-item" href="#">Atualizar Status</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Avaliar Livro</a>
-          </div>
-        </li>
-      </ul>
-    </div>
+                <div class="navbar-brand">
+                    <span class="navbar-logo">
+                        <a href="index.html"><img src="../assets/images/logo.png" alt="logo" style="height: 3.4rem;"></a>
+                    </span>
+                    <span>
+                        <a class="navbar-brand ml-2" href="index.html" style="font-size: 1.5rem;">
+                            Shelf
+                        </a>
+                    </span>
+                </div>
 
-    <div class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="perfilDropdown" role="button" data-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false" style="color: black;">
-        <img id="perfil-header" src="..\assets\images\perfil.png" alt="perfil" height="30px">
-      </a>
-      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="#">Meus Livros</a>
-        <a class="dropdown-item" href="#">Minhas Avaliações</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Perfil</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Sair</a>
-      </div>
-    </div>
-  </nav>
+                <div class="nav navbar-right" style="font-size: 1.5em;">
+                    
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active mx-4">
+                            <a class="nav-link" href="lista-para-ler.html" style="color: black;">
+                                Para Ler
+                            </a>
+                        </li>
+                        <li class="nav-item active mx-4">
+                            <a class="nav-link" href="lista-lendo-agora.html" style="color: black;">
+                                Lendo Agora
+                            </a>
+                        </li>
+                        <li class="nav-item active mx-4">
+                            <a class="nav-link" href="lista-lidos.html" style="color: black;">
+                                Lidos
+                            </a>
+                        </li>
+                    </ul>
 
-  <div class="container" style="margin: 0; height: 100%; max-width: 100%;">
-    <div class="row">
+                    <div class="nav-item dropdown ml-2">
+                        <a class="nav-link dropdown-toggle" href="#" id="perfilDropdown" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false" style="color: black;">
+                        <img id="perfil-header" src="..\assets\images\perfil.png" alt="perfil" height="30px">
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Perfil</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="../home/index.html">Sair</a>
+                        </div>
+                    </div>
+                </div>
 
-      <div class="col-2" style="background-color: cadetblue; padding-top: 30px;">
-        <nav class="nav flex-column menu-vertical">
-          <h3>Listas</h3>
-          <a class="nav-link" href="lista-lendo-agora.html">Lendo Agora</a>
-          <a class="nav-link" href="lista-lidos.html">Lidos</a>
-          <a class="nav-link" href="lista-para-ler.html">Para Ler</a>
-
-          <h3>Opções</h3>
-          <a class="nav-link" href="#">Adiocinar Livro</a>
-          <a class="nav-link" href="#">Atualizar Status</a>
-          <a class="nav-link" href="#">Avaliar Livro</a>
+            </div>
         </nav>
-      </div>
 
-      <div class="col-10">
-        <span id="result-pesquisa"></span>
+    </header>
 
-        <div class="lista-livros" style="margin: 5px;">
-          <h2>Lendo Agora</h2>
-          <table class="table" style="font-size: large;">
-            <thead class="thead-dark">
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col" style="width: 20%">Nome</th>
-                <th scope="col">Capa</th>
-                <th scope="col" style="width: 25%">Tempo Lendo até Agora</th>
-                <th scope="col" style="width: 25%">Opção</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Livro</td>
-                <td><img src="..\assets\images\capa.png" alt="logo" height="15%"></td>
-                <td>5 dias</td>
-                <td><a class="nav-link" href="#">Atualizar Status</a></td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Livro</td>
-                <td><img src="..\assets\images\capa.png" alt="logo" height="15%"></td>
-                <td>30 dias</td>
-                <td><a class="nav-link" href="#">Atualizar Status</a></td>
-              </tr>
-            </tbody>
-          </table>
+    <main>
+        <section style="background-color: lightgray;">
+            <div class="container text-center py-4">
+                <h1>Lendo Agora</h1>
+                <br>
+                <div class="row pb-5">
+                    <table class="table" style="font-size: large;">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col" style="width: 20%">Nome</th>
+                                <th scope="col">Capa</th>
+                                <th scope="col" style="width: 25%">Tempo Lendo até Agora</th>
+                                <th scope="col" style="width: 25%">Opção</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Livro</td>
+                                <td><img src="..\assets\images\capa.png" alt="logo" height="15%"></td>
+                                <td>5 dias</td>
+                                <td><a class="nav-link" href="#">Atualizar Status</a></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Livro</td>
+                                <td><img src="..\assets\images\capa.png" alt="logo" height="15%"></td>
+                                <td>30 dias</td>
+                                <td><a class="nav-link" href="#">Atualizar Status</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </section>
+    </main>
+
+  <footer class="footer">
+
+        <div class="container">
+          <span>© Copyright 2020 Shell na Terra. Todos direitos reservados.</span>
         </div>
-      </div>
-    </div>
-  </div>
 
-  <footer>
+  </footer>
+  
     <!-- JS -->
     <script src="../assets/script/jquery.js"></script>
     <script src="../assets/script/bootstrap.bundle.min.js"></script>
     <script src="../assets/script/script.js"></script>
-  </footer>
 
 </body>
 
